# week2_assessment

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
cs2_match_tracker/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
cs2_match_tracker/management/commands/: populate_db.py
cs2_match_tracker/migrations/: 0001_initial.py  0002_alter_map_name_alter_weapon_name.py
